--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               
               <p><a href="./links/AcmeWebDesign.htm" target="_blank">Acme Web Design</a></p><br>
              
-              <p><a href="assignment3.html" target="_blank">Portfolio webpage</a></p><br>
+              <p><a href="index.html" target="_blank">Portfolio webpage</a></p><br>
           </div>
       </div>
  </section>
