--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      	</div>
      	<nav>
      		<ul>
-     			<li><a href="assignment3.html">Home</a></li>
+     			<li><a href="index.html">Home</a></li>
      			<li><a href="#">Portfolio</a></li>
      			<li><a href="#">About</a></li>
      			<li><a href="#">Services</a></li>
